force-app/main/default/objects/Transaction__c/fields/Account_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Account_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Invoice</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactions (Account Invoice)</relationshipLabel>
    <relationshipName>Invoice_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>