force-app/main/default/objects/Transaction__c/fields/Active_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Active_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Forecast</label>
    <type>Checkbox</type>
</CustomField>