force-app/main/default/objects/Transaction__c/fields/Global_Name__c.field-meta.xml
<CustomField>
    <fullName>Global_Name__c</fullName>
    <description>This fields allows to unify customers with different IDs under the same name.</description>
    <label>Global Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>