force-app/main/default/objects/Transaction__c/fields/Market_Country__c.field-meta.xml
<CustomField>
    <fullName>Market_Country__c</fullName>
    <label>Market Country</label>
    <length>30</length>
    <type>Text</type>
</CustomField>