force-app/main/default/objects/Transaction__c/fields/Number_days_transaction__c.field-meta.xml
<CustomField>
    <fullName>Number_days_transaction__c</fullName>
    <formula>ABS(Date__c - TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number days transaction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>