force-app/main/default/objects/Transaction__c/fields/Price_USD_MT__c.field-meta.xml
<CustomField>
    <fullName>Price_USD_MT__c</fullName>
    <formula>Amount__c / QuantityInMT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price USD/MT</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>