force-app/main/default/objects/Transaction__c/fields/Product_Family_ERP__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_ERP__c</fullName>
    <label>Product Family ERP</label>
    <length>40</length>
    <type>Text</type>
</CustomField>