force-app/main/default/objects/Transaction__c/fields/QuantityInMT__c.field-meta.xml
<CustomField>
    <fullName>QuantityInMT__c</fullName>
    <label>QuantityInMT</label>
    <precision>17</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>