force-app/main/default/objects/Transaction__c/fields/Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Reference_ID__c</fullName>
    <externalId>true</externalId>
    <label>Reference ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>