force-app/main/default/objects/Transaction__c/fields/Sale__c.field-meta.xml
<CustomField>
    <fullName>Sale__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que sirve para filtrar el cálculo de Costos</description>
    <label>Sale</label>
    <type>Checkbox</type>
</CustomField>