force-app/main/default/objects/Transaction__c/fields/SQM_Company__c.field-meta.xml
<CustomField>
    <fullName>SQM_Company__c</fullName>
    <label>SQM Company</label>
    <length>20</length>
    <type>Text</type>
</CustomField>