force-app/main/default/objects/Transaction__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>IF(
				AND(
								YEAR(Date__c) = 2020,
								Sale__c = true),
				Product__r.Costo__c * QuantityInMT__c, 
				IF(
								AND(
												YEAR(Date__c) &lt;&gt; 2020,
								    Sale__c = true),
									Product__r.Costo_A_OANTERIOR__c * QuantityInMT__c, 0
								)
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>