force-app/main/default/objects/Transaction__c/fields/Transaction_State__c.field-meta.xml
<CustomField>
    <fullName>Transaction_State__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>Open Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>