force-app/main/default/objects/Transaction__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Campo que permite identificar la versión del forecast cargado.</description>
    <label>Versión</label>
    <length>60</length>
    <type>Text</type>
</CustomField>