force-app/main/default/objects/Transaction__c/recordTypes/Budget.recordType-meta.xml
<RecordType>
    <fullName>Budget</fullName>
    <active>true</active>
    <label>Budget</label>
</RecordType>