force-app/main/default/objects/Transaction__c/recordTypes/Forecast.recordType-meta.xml
<RecordType>
    <fullName>Forecast</fullName>
    <active>false</active>
    <label>Forecast</label>
</RecordType>