force-app/main/default/objects/Transaction__c/recordTypes/HQ.recordType-meta.xml
<RecordType>
    <fullName>HQ</fullName>
    <active>false</active>
    <label>HQ</label>
</RecordType>