force-app/main/default/objects/Transaction__c/recordTypes/Transactions.recordType-meta.xml
<RecordType>
    <fullName>Transactions</fullName>
    <active>true</active>
    <label>Transactions</label>
</RecordType>