force-app/main/default/objects/Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>Account_Invoice__c</columns>
    <columns>NAME</columns>
    <columns>Transaction_State__c</columns>
    <columns>Market_Country__c</columns>
    <columns>Region__c</columns>
    <columns>Product_Family_ERP__c</columns>
    <columns>SQM_Company__c</columns>
    <columns>Amount__c</columns>
    <columns>Reference_ID__c</columns>
    <columns>QuantityInMT__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Family__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reference_ID__c</field>
        <operation>contains</operation>
        <value>SALE24</value>
    </filters>
    <label>Todos</label>
</ListView>